Fix: critical gameplay bugs + expand CI test coverage to 111 tests
Bug Fixes:
- Fix fuel consumption rate (was per-tick = 20x too fast; now per-second via
  20-tick counter). Full tank now lasts 33–100s as documented, not 2–5s.
- Fix sendSystemMessage on Entity (was a no-op; added notifyPilot() helper
  that looks up pilot UUID from ServerLevel to actually deliver messages).
- Fix weight-overload warning spam (fired 20x/sec; now rate-limited to
  once every 5 seconds via overloadWarningCooldown).
- Fix instant speed stop when releasing W (currentSpeed=0 jump removed;
  smooth deceleration via Lerp target=0, decelerates 3x faster than accel).
- Fix HelmInputClient: input sent only on change caused packet-loss freeze;
  now sends every 2 ticks unconditionally (10 Hz heartbeat).
- Fix calculateMaxSpeed(0) returning LIGHT/30; 0 blocks now returns 0 speed.
- Fix woodToEnergy(-n) returning negative energy; clamped to Math.max(0, n).

UX:
- Add missing i18n keys: no_fuel, too_heavy, fuel_added in en_us.json.

Tests (111 total, 0 failures):
- New: WeightCategoryTest (25) – all 4 categories, boundaries, canFly, warnings
- New: AccelerationPhaseTest (25) – fromTick transitions, speeds, intensities,
  contiguous ranges, monotonicity, negative-tick safety
- Expanded: ShipAssemblyServiceTest (15) – null/empty list guards, countThrusters,
  exact-ID matching, StructureScan.canAssemble with all failure paths
- Expanded: ShipPhysicsTest (26) – 0/negative blockCount, height boundaries,
  fuel monotonicity, null-safe hasCollision, effectiveSpeed edge cases
- Expanded: FuelSystemTest (20) – negative woodToEnergy, 0-fuel time, overflow
  display, isCritical boundary, maxFuel=0 safety
- New stubs: net.minecraft.core.BlockPos, BlockState (minimal, test-only)